Prevents text from overflowing container.

--- a/src/app/resource-tile/resource-tile.component.scss
+++ b/src/app/resource-tile/resource-tile.component.scss
@@ -28,9 +28,9 @@ mat-card.resource {
   }
 
   .icon-with-content {
-    display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
+    //display: flex;
+    //align-items: flex-start;
+    //justify-content: flex-start;
 
     .type-icon {
       width: $icon-size + 20px;
